Reemplazar textos 'Rally' por 'Safari' en UI y metadata

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Safari Tras las Sierras - Rally Valle Fértil</title>
+    <title>Safari Tras las Sierras - Safari Valle Fértil</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
+
+
+
 
